# pokemonlegends-backend

./: .env.example  Cargo.toml  docker-compose.yml
resources/: effects.json  effecttypes.py  map1.json  monster_templates.json  moves.json  moves.py  needmoves.json  needmoves.py  pokemon.json  pokemon2.json  reformat.py  types.json
src/: app_state.rs  config.rs  handlers.rs  lib.rs  lobby.rs  main.rs  models.rs  redis_manager.rs
src/combat/: manager.rs  messages.rs  mod.rs  state.rs  utils.rs
src/combat/logic/: battle_calculations.rs  battle_effects.rs  mod.rs  pvp_battle.rs  wild_battle.rs
src/game_loop/: mod.rs  monster_movement.rs  monster_spawner.rs  player_movement.rs  pokemon_collection.rs
src/monsters/: mod.rs  monster.rs  monster_manager.rs  move_manager.rs
src/stats/: mod.rs  nature.rs
