[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1.0"
futures-util = "0.3.31"
dotenv = "0.15.0"
regex = "1.7"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
chrono = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }